--- a/partials/header.html
+++ b/partials/header.html
@@ -18,10 +18,12 @@
     <div class="nav-overlay__content">
       <ul class="nav-overlay__list">
         <li class="nav-overlay__item"><a href="index.html" class="nav-overlay__link">TOP</a></li>
+        <li class="nav-overlay__item"><a href="access.html" class="nav-overlay__link">ACCESS</a></li>
         <li class="nav-overlay__item"><a href="story.html" class="nav-overlay__link">STORY</a></li>
         <li class="nav-overlay__item"><a href="play.html" class="nav-overlay__link">FOR PLAYERS</a></li>
-        <li class="nav-overlay__item"><a href="credit.html" class="nav-overlay__link">CREDITS</a></li>
         <li class="nav-overlay__item"><a href="making.html" class="nav-overlay__link">MAKING</a></li>
+        <li class="nav-overlay__item"><a href="credit.html" class="nav-overlay__link">CREDITS</a></li>
+
 
       </ul>
     </div>
