--- a/partials/line-banner.html
+++ b/partials/line-banner.html
@@ -5,7 +5,12 @@
       <span class="line-banner-label">公式LINE</span>
       <span class="line-banner-message">LINEで事前予約できます！</span>
     </div>
-    <a href="https://line.me/R/ti/p/@762penml" class="line-banner-btn" target="_blank" rel="noopener noreferrer">
+    <a
+      href="https://line.me/R/ti/p/@762penml"
+      class="line-banner-btn"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
       LINEで予約
     </a>
   </div>
